update code pdf

--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,50 @@
     <meta charset="utf-8">
     <title>Angular8</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1"
+    >
+    <link
+        rel="icon"
+        type="image/x-icon"
+        href="favicon.ico"
+    >
+    <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="https://germini.info/js/jqvmap/jquery.vmap.js"></script>
-    <script type="text/javascript" src="https://germini.info/js/jqvmap/maps/jquery.vmap.france.js"
-        charset="utf-8"></script>
-    <script type="text/javascript" src="http://germini.info/js/jqvmap/maps/continents/jquery.vmap.asia.js"
-        charset="utf-8"></script>
+    <script
+        type="text/javascript"
+        src="https://code.jquery.com/jquery-1.11.3.min.js"
+    ></script>
+    <script
+        type="text/javascript"
+        src="https://germini.info/js/jqvmap/jquery.vmap.js"
+    ></script>
+    <script
+        type="text/javascript"
+        src="https://germini.info/js/jqvmap/maps/jquery.vmap.france.js"
+        charset="utf-8"
+    ></script>
+    <script
+        type="text/javascript"
+        src="http://germini.info/js/jqvmap/maps/continents/jquery.vmap.asia.js"
+        charset="utf-8"
+    ></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+        rel="stylesheet"
+    >
+    <link
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet"
+    >
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
     <script>
         jQuery(document).ready(function () {
             jQuery('#vmap').vectorMap({
