add code firebase

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,10 @@
             });
         });
     </script>
+    <link
+        rel="manifest"
+        href="manifest.json"
+    >
 </head>
 
 <body>
